# modality-llm

./: .gitignore  README.md  pyproject.toml
experiments/: dataset-v1-repair-rejudged-repaired.csv  run.sh
src/modality_llm/: analysis_augmentation.py  analysis_bayes_common.py  analysis_compare.py  analysis_grammar_bayes.py  analysis_modal_bayes.py  analysis_reports.py  augmentation.py  cli.py  examples.py  grammar.py  llm_cache.py  llm_utils.py  modal.py  model_manager.py  prompts.py  schema.py  settings.py  utils.py
src/modality_llm/reporting/: grammar.py  modal.py
src/modality_llm/tasks/: generate_task.py  grammar_task.py  modal_task.py
tests/: conftest.py  test_analysis_bayes_common.py  test_analysis_compare.py  test_analysis_grammar_bayes.py  test_analysis_modal_bayes.py  test_augmentation.py  test_examples.py  test_generate_task.py  test_io_utils.py  test_llm_cache.py  test_modal.py  test_modality_removal.py  test_model_manager.py  test_prompts.py  test_remove_modality.py  test_tasks_grammar_generate.py  test_tasks_modal_task.py
tests/fixtures/: modal_verbs_sample.jsonl
